--- a/04-Descriptive-statistics.qmd
+++ b/04-Descriptive-statistics.qmd
@@ -387,7 +387,17 @@ What about the standard scores? Well, this is a little different. If we calculat
 
 ## 本章小結
 
-Calculating some basic descriptive statistics is one of the very first things you do when analysing real data, and descriptive statistics are much simpler to understand than inferential statistics, so like every other statistics textbook I've started with descriptives. In this chapter, we talked about the following topics:
+任何資料分析作業都是從最基本的描述統計開始，而且比起推論統計學習門檻較低。因此本書比照其他教科書由描述統計開始。這一章的各主題有以下重點：
+
+- [集中量數](04-Descriptive-statistics.html#%E9%9B%86%E4%B8%AD%E9%87%8F%E6%95%B8) 集中量數顯示資料在幾何空間的所在位置。各種論文通常會報告平均值、中位數或眾數其中一種集中量數。
+- [變異量數](04-Descriptive-statistics.html#sec-Measures-of-variability) 變異量數顯示資料在幾何空間的離散範圍。常用的變異量數有全距、四分位數間距、平均絕對差、變異數、標準差。
+- [偏態與峰度](04-Descriptive-statistics.html#%E5%81%8F%E6%85%8B%E8%88%87%E5%B3%B0%E5%BA%A6) 分析作業也會關切變項資料分配的對稱程度(偏態)，以及寬窄程度(峰度)。
+- [分組描述統計](04-Descriptive-statistics.html#%E5%88%86%E7%B5%84%E6%8F%8F%E8%BF%B0%E7%B5%B1%E8%A8%88) 分組統計是jamovi的基本功能，值得學習如何設定分組用變項。
+- [標準分數](04-Descriptive-statistics.html#sec-Standard-scores) z分數放在這一章有些微妙，因為能用於描述統計，也能用於推論統計。請務必學好這一節的示範重點，之後的章節還會用到。
+
+下一章我們將學習如何繪製統計圖，似乎是輕鬆有趣的單元。結束前我想提醒一點，傳統統計課給描述統計的講授時間比例，大約只有推論統計的1/8或1/9，這是因為後者內容比較複雜且難學。不過這樣的安排很容易讓同學輕忽安排易讀的描述統計，也是重要的實務工作。請切記...
+
+<!---Calculating some basic descriptive statistics is one of the very first things you do when analysing real data, and descriptive statistics are much simpler to understand than inferential statistics, so like every other statistics textbook I've started with descriptives. In this chapter, we talked about the following topics:
 
 -   [Measures of central tendency]. Broadly speaking, central tendency measures tell you where the data are. There's three measures that are typically reported in the literature: the mean, median and mode.
 -   [Measures of variability]. In contrast, measures of variability tell you about how "spread out" the data are. The key measures are: range, standard deviation, and interquartile range.
@@ -395,4 +405,4 @@ Calculating some basic descriptive statistics is one of the very first things yo
 -   [Descriptive statistics separately for each group]. Since this book focuses on doing data analysis in jamovi, we spent a bit of time talking about how descriptive statistics are computed for different subgroups.
 -   [Standard scores]. The z-score is a slightly unusual beast. It's not quite a descriptive statistic, and not quite an inference. Make sure you understand this section. It'll come up again later.
 
-In the next Chapter we'll move on to a discussion of how to draw pictures! Everyone loves a pretty picture, right? But before we do, I want to end on an important point. A traditional first course in statistics spends only a small proportion of the class on descriptive statistics, maybe one or two lectures at most. The vast majority of the lecturer's time is spent on inferential statistics because that's where all the hard stuff is. That makes sense, but it hides the practical everyday importance of choosing good descriptives. With that in mind...
+In the next Chapter we'll move on to a discussion of how to draw pictures! Everyone loves a pretty picture, right? But before we do, I want to end on an important point. A traditional first course in statistics spends only a small proportion of the class on descriptive statistics, maybe one or two lectures at most. The vast majority of the lecturer's time is spent on inferential statistics because that's where all the hard stuff is. That makes sense, but it hides the practical everyday importance of choosing good descriptives. With that in mind...--->
