--- a/13-Comparing-several-means-one-way-ANOVA.qmd
+++ b/13-Comparing-several-means-one-way-ANOVA.qmd
@@ -389,7 +389,7 @@ Okay, so how do we run the Levene test? Simple really - under the ANOVA 'Assumpt
 knitr::include_graphics("images/fig13-5.png")  
 ```
 
-### 修正異質性的分析結果
+### 校正異質性的分析結果
 
 In our example, the homogeneity of variance assumption turned out to be a pretty safe one: the Levene test came back non-significant (notwithstanding that we should also look at the plot of standard deviations), so we probably don't need to worry. However, in real life we aren't always that lucky. How do we save our ANOVA when the homogeneity of variance assumption is violated? If you recall from our discussion of t-tests, we've seen this problem before. The Student t-test assumes equal variances, so the solution was to use the Welch t-test, which does not. In fact, @Welch1951 also showed how we can solve this problem for ANOVA too (the **Welch one-way test**). It's implemented in jamovi using the One-Way ANOVA analysis. This is a specific analysis approach just for one-way ANOVA, and to run the Welch one-way ANOVA for our example, we would re-run the analysis as previously, but this time use the jamovi ANOVA - One Way ANOVA analysis command, and check the option for Welch's test (see @fig-fig13-6). To understand what's happening here, let's compare these numbers to what we got earlier when [Running an ANOVA in jamovi] originally. To save you the trouble of flicking back, this is what we got last time: $F(2, 15) = 18.611, p = .00009$, also shown as the Fisher's test in the One-Way ANOVA shown in @fig-fig13-6.
 
@@ -417,7 +417,7 @@ knitr::include_graphics("images/fig13-7.png")
 
 Alongside inspecting the QQ plot for any deviations from normality, the Shapiro-Wilk test for our data does show a non-significant effect, with p = 0.6053 (see @fig-fig13-6. This therefore supports the QQ plot assessment; both checks find no indication that normality is violated.
 
-### 修正非常態性的分析結果
+### 排除非常態性的分析結果
 
 Now that we've seen how to check for normality, we are led naturally to ask what we can do to address violations of normality. In the context of a one-way ANOVA, the easiest solution is probably to switch to a non-parametric test (i.e., one that doesn't rely on any particular assumption about the kind of distribution involved). We've seen non-parametric tests before, in @sec-Comparing-two-means. When you only have two groups, the Mann-Whitney or the Wilcoxon test provides the non-parametric alternative that you need. When you've got three or more groups, you can use the **Kruskal-Wallis rank sum test** [@KruskalWallis1952]. So that's the test we'll talk about next.
 
@@ -574,6 +574,19 @@ There's one last thing I want to point out before finishing. It's something that
 
 ## 本章小結
 
+這一章份量不少，但是有一些細節我並未提到[^13-summary-1]。最明顯的是在此並未討論處理不只一個分組變項的資料，我們在下一章 @sec-Factorial-ANOVA 將學習其中一部分。本章的學習重點有：
+
+- 理解[變異數分析的運作原理](13-Comparing-several-means-one-way-ANOVA.html#sec-How-ANOVA-works) 以及[使用jamovi完成變異數分析](13-Comparing-several-means-one-way-ANOVA.html#jamovi%E7%9A%84%E8%AE%8A%E7%95%B0%E6%95%B8%E5%88%86%E6%9E%90%E6%A8%A1%E7%B5%84) 
+- 學習如何計算變異數分析的[效果量](13-Comparing-several-means-one-way-ANOVA.html#%E6%95%88%E6%9E%9C%E9%87%8F) 
+- [多重比較與事後檢定](13-Comparing-several-means-one-way-ANOVA.html#%E5%A4%9A%E9%87%8D%E6%AF%94%E8%BC%83%E8%88%87%E4%BA%8B%E5%BE%8C%E6%AA%A2%E5%AE%9A)
+- [單因子變異數分析的執行條件](13-Comparing-several-means-one-way-ANOVA.html#%E5%96%AE%E5%9B%A0%E5%AD%90%E8%AE%8A%E7%95%B0%E6%95%B8%E5%88%86%E6%9E%90%E7%9A%84%E5%9F%B7%E8%A1%8C%E6%A2%9D%E4%BB%B6)
+- [同質性檢核](13-Comparing-several-means-one-way-ANOVA.html#sec-Checking-the-homogeneity-of-variance-assumption) 以及 [校正異質性的分析結果](13-Comparing-several-means-one-way-ANOVA.html#%E6%A0%A1%E6%AD%A3%E7%95%B0%E8%B3%AA%E6%80%A7%E7%9A%84%E5%88%86%E6%9E%90%E7%B5%90%E6%9E%9C)
+- [常態性檢核](13-Comparing-several-means-one-way-ANOVA.html#sec-Checking-the-normality-assumption)以及[排除非常態性的分析結果](13-Comparing-several-means-one-way-ANOVA.html#%E6%8E%92%E9%99%A4%E9%9D%9E%E5%B8%B8%E6%85%8B%E6%80%A7%E7%9A%84%E5%88%86%E6%9E%90%E7%B5%90%E6%9E%9C)
+- [單因子重覆量數變異數分析](13-Comparing-several-means-one-way-ANOVA.html#%E5%96%AE%E5%9B%A0%E5%AD%90%E9%87%8D%E8%A6%86%E9%87%8F%E6%95%B8%E8%AE%8A%E7%95%B0%E6%95%B8%E5%88%86%E6%9E%90) 以及其無母數版本[單因子重覆量數變異數分析](13-Comparing-several-means-one-way-ANOVA.html#friedman%E7%84%A1%E6%AF%8D%E6%95%B8%E9%87%8D%E8%A6%86%E9%87%8F%E6%95%B8%E8%AE%8A%E7%95%B0%E6%95%B8%E5%88%86%E6%9E%90)
+
+[^13-summary-1]: 就像其他章節，本章內容有許多參考來源，其中原作者參考最多的專書是 @Sahai2000 。這本書對初學者來說偏難，不過如果學到這裡，想知道更多變異數分析的數學原理，這本書是不錯的參考資源。
+
+<!---
 There's a fair bit covered in this chapter, but there's still a lot missing [^13-summary-1]. Most obviously, I haven't discussed how to run an ANOVA when you are interested in more than one grouping variable, but that will be discussed in a lot of detail in @sec-Factorial-ANOVA. In terms of what we have discussed, the key topics were:
 
 - The basic logic behind [How ANOVA works] and [Running an ANOVA in jamovi] 
@@ -584,4 +597,4 @@ There's a fair bit covered in this chapter, but there's still a lot missing [^13
 - [Checking the normality assumption] and what to do if it is violated: [Removing the normality assumption]
 - [Repeated measures one-way ANOVA] and the non-parametric equivalent, [The Friedman non-parametric repeated measures ANOVA test]
 
-[^13-summary-1]: As with all of the chapters in this book, there are quite a few different sources that I've relied upon, but the one stand-out text that I've been most heavily influenced by @Sahai2000. It's not a good book for beginners, but it's an excellent book for more advanced readers who are interested in understanding the mathematics behind ANOVA.
+[^13-summary-1]: As with all of the chapters in this book, there are quite a few different sources that I've relied upon, but the one stand-out text that I've been most heavily influenced by @Sahai2000. It's not a good book for beginners, but it's an excellent book for more advanced readers who are interested in understanding the mathematics behind ANOVA.--->
