--- a/14-Factorial-ANOVA.qmd
+++ b/14-Factorial-ANOVA.qmd
@@ -921,10 +921,10 @@ This time around, it's technically possible to distinguish between the effect of
 
 ## 本章小結
 
-- [Factorial ANOVA 1: balanced designs, no interactions] and with [interactions](Factorial ANOVA: balanced designs, interactions allowed) included
-- [Effect size], estimated means, and confidence intervals in a factorial ANOVA
-- [Assumption checking] in ANOVA
-- [Analysis of Covariance (ANCOVA)](#analysis-of-covariance-ancova)
-- Understanding [ANOVA as a linear model], including [Different ways to specify contrasts]
-- [Post hoc tests] using Tukey's HSD and a brief commentary on [The method of planned comparisons]
-- [Factorial ANOVA 3: unbalanced designs]
+- [平衡且無交互作用的因子設計分析](14-Factorial-ANOVA.html#%E5%B9%B3%E8%A1%A1%E4%B8%94%E7%84%A1%E4%BA%A4%E4%BA%92%E4%BD%9C%E7%94%A8%E7%9A%84%E5%9B%A0%E5%AD%90%E8%A8%AD%E8%A8%88%E5%88%86%E6%9E%90)以及[有交互作用因子設計分析](14-Factorial-ANOVA.html#%E5%B9%B3%E8%A1%A1%E4%B8%94%E6%9C%89%E4%BA%A4%E4%BA%92%E4%BD%9C%E7%94%A8%E7%9A%84%E5%9B%A0%E5%AD%90%E8%A8%AD%E8%A8%88%E5%88%86%E6%9E%90) 
+- 因子設計變異數分析的[效果量](14-Factorial-ANOVA.html#%E8%AE%8A%E7%95%B0%E6%95%B8%E5%88%86%E6%9E%90%E7%9A%84%E6%95%88%E6%9E%9C%E9%87%8F)估計平均值以及信賴區間。
+- [檢核變異數分析的執行條件](14-Factorial-ANOVA.html#%E6%AA%A2%E6%A0%B8%E8%AE%8A%E7%95%B0%E6%95%B8%E5%88%86%E6%9E%90%E7%9A%84%E5%9F%B7%E8%A1%8C%E6%A2%9D%E4%BB%B6)
+- [共變數分析  (ANCOVA)](14-Factorial-ANOVA.html#sec-analysis-of-covariance-ancova)
+- [變異數分析就是線性模型](14-Factorial-ANOVA.html#sec-ANOVA-as-a-linear-model)還有[各種多重比較方案](14-Factorial-ANOVA.html#%E5%90%84%E7%A8%AE%E5%A4%9A%E9%87%8D%E6%AF%94%E8%BC%83%E6%96%B9%E6%A1%88)
+- [事後檢定](14-Factorial-ANOVA.html#sec-Post-hoc-tests)談到杜凱氏HSD，還有提到規劃使用[事前檢定方法](14-Factorial-ANOVA.html#sec-The-method-of-planned-comparisons)要思考的條件。
+- [不平衡的因子設計分析](14-Factorial-ANOVA.html#%E4%B8%8D%E5%B9%B3%E8%A1%A1%E7%9A%84%E5%9B%A0%E5%AD%90%E8%A8%AD%E8%A8%88%E5%88%86%E6%9E%90)
